# telegrip

./: README_CN.md  STARTUP_COMMANDS.md  config.yaml  pyproject.toml  robot_teleop_config.yaml  start_mega_moveit_teleop.sh  start_rviz2_telegrip.sh  start_telegrip_mega_demo.sh  start_telegrip_ros2_stack.sh  telegrip_ros2.rviz  web-ui-function-guide.md  架构及数据流图.md
URDF/mega_robot_1st_moveit_config/: CMakeLists.txt  package.xml
URDF/mega_robot_1st_moveit_config/config/: joint_limits.yaml  kinematics.yaml  moveit_controllers.yaml  ompl_planning.yaml  vr_to_moveit_bridge.yaml
URDF/mega_robot_1st_moveit_config/launch/: moveit_rviz.launch.py  teleop_dual_arm.launch.py
URDF/mega_robot_1st_moveit_config/rviz/: mega_robot_dual_arm.rviz
URDF/mega_robot_1st_moveit_config/srdf/: mega_robot_1st.srdf
URDF/mega_robot_1st_moveit_config/urdf/: whole_robot_moveit_display.urdf
URDF/mega_robot_1st_urdf/: CMakeLists.txt  package.xml
URDF/mega_robot_1st_urdf/launch/: display.launch.py  gazebo.launch.py
URDF/mega_robot_1st_urdf/meshes/: Head1.STL  Head2.STL  Left_link1.STL  Left_link2.STL  Left_link3.STL  Left_link4.STL  Left_link5.STL  Left_link6.STL  Left_link7.STL  Right_link1.STL  Right_link2.STL  Right_link3.STL  Right_link4.STL  Right_link5.STL  Right_link6.STL  Right_link7.STL  base_link.STL  trunk1.STL  trunk2.STL
URDF/mega_robot_1st_urdf/rviz/: mega_robot_1st.rviz
URDF/mega_robot_1st_urdf/urdf/: whole_robot.csv  whole_robot.urdf  whole_robot.urdf.backup  whole_robot_moveit.urdf  whole_robot_withhand.urdf
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/mega_robot_1st_moveit_config/share/mega_robot_1st_moveit_config/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/mega_robot_1st_moveit_config/share/mega_robot_1st_moveit_config/cmake/: mega_robot_1st_moveit_configConfig-version.cmake  mega_robot_1st_moveit_configConfig.cmake
install/mega_robot_1st_moveit_config/share/mega_robot_1st_moveit_config/config/: joint_limits.yaml  kinematics.yaml  moveit_controllers.yaml  ompl_planning.yaml  vr_to_moveit_bridge.yaml
install/mega_robot_1st_moveit_config/share/mega_robot_1st_moveit_config/environment/: ament_prefix_path.dsv  path.dsv
install/mega_robot_1st_moveit_config/share/mega_robot_1st_moveit_config/launch/: moveit_rviz.launch.py  teleop_dual_arm.launch.py
install/mega_robot_1st_moveit_config/share/mega_robot_1st_moveit_config/rviz/: mega_robot_dual_arm.rviz
install/mega_robot_1st_urdf/share/mega_robot_1st_urdf/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/vr_input_bridge/share/vr_input_bridge/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/vr_input_bridge/share/vr_input_bridge/launch/: vr_input_bridge.launch.py
install/vr_input_bridge/share/vr_input_bridge/web-ui/: index.html  interface.js  styles.css
log/: latest_build
telegrip/: __init__.py  control_loop.py  main.py  main_ros2.py  ros2_bridge.py  ros2_heading_calibrator.py  ros2_input_adapter.py  ros2_moveit_bridge.py  ros2_path_tracker.py  utils.py
telegrip/core/: robot_interface.py  visualizer.py
telegrip/inputs/: vr_ws_server.py
vr_input_bridge/: README.md  setup.cfg  setup.py
vr_input_bridge/launch/: vr_input_full.launch.py  vr_input_with_calibrator.launch.py
vr_input_bridge/vr_input_bridge/: __init__.py  config.py  heading_calibrator.py  https_server.py  input_adapter.py  main.py  ros2_bridge.py  utils.py  vr_ws_server.py
vr_input_bridge/web-ui/: vr_app.js
web-ui/: index.html  interface.js  vr_app.js
(+38 files in other folders)
